⚖️ Add admin auction management | Swagger docs | ADMIN-17
